# tqdm

./: .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .prospector.yml  .readme.rst  .snapcraft.yml  .style.yapf  .tqdm.gpg.enc  .travis.yml  .zenodo.json  CODE_OF_CONDUCT.md  CONTRIBUTE  CONTRIBUTING.md  DEMO.ipynb  Dockerfile  LICENCE  LICENSE  MANIFEST  MANIFEST.in  Makefile  OPTIMIZATION_NOTES.md  README.md  README.rst  RELEASE  _tqdm.py  _utils.py  appveyor.yml  asv.conf.json  asv.css  asv.js  asv_ui.js  baseline_bench.py  commit_msg.txt  demo.yml  environment.yml  graphdisplay.js  index.html  (+25 more)
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  Nguyenvanduong98ht@gmail.com  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  enhancement.md  issue.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/workflows/: bench.yml  check.yml  comment-bot.yml  post-release.yml  test.yml
.meta/: .readme.rst  .snapcraft.yml  .tqdm.1.md  docs.md  mkcompletion.py  mkdocs.py  mksnap.py  nbval.ini  requirements-build.txt  requirements-test.txt
benchmarks/: README.md  benchmarks.py
dev_tqdm/: _monitor.py  _version.py  gui.py  sklearn.py  tqdm.1
dev_tqdm/tests/: tests_notebook.py  tests_synchronisation.py
examples/: 7zx.py  async_coroutines.py  coroutine_pipe.py  include_no_requirements.py  pandas_progress_apply.py  paper.bib  paper.md  paper_aux.py  parallel_bars.py  redirect_print.py  simple_examples.py  tqdm_requests.py  tqdm_wget.py  tqdm_zipfile.py  wrapping_generators.py
examples/tk/: tk_cancel.py  tk_manual.py  tk_reset.py  trange.py
graphs/alive-progress/branch-master/machine-github-actions/progressbar2/python-3.11/rich/: benchmarks.track_alternatives.json  benchmarks.track_tqdm.json  summary.json
graphs/alive-progress/branch-master/machine-github-actions/progressbar2/python-3.9/rich/: benchmarks.track_alternatives.json  benchmarks.track_tqdm.json  summary.json
graphs/summary/: benchmarks.track_alternatives.json  benchmarks.track_tqdm.json
scripts/: zsh_completion.in  zsh_completion.py
tests/: conftest.py  py37_asyncio.py  tests_asyncio.py  tests_asyncio_notebook.py  tests_concurrent.py  tests_contrib.py  tests_contrib_logging.py  tests_dask.py  tests_gui.py  tests_itertools.py  tests_keras.py  tests_main.py  tests_notebook.ipynb  tests_notebook.py  tests_pandas.py  tests_perf.py  tests_rich.py  tests_rlock.py  tests_synchronisation.py  tests_tk.py  tests_tqdm.py  tests_utils.py  tests_version.py
tests/contrib/: tests_logging.py
tqdm/: ._tqdm.py.swp  __init__.py  __main__.py  _dask.py  _fake_ipywidgets.py  _lazy_import.py  _main.py  _monitor.py  _pandas.py  _tqdm.py  _tqdm_bare.py  _tqdm_bare_class.py  _tqdm_custom.py  _tqdm_custommulti.py  _tqdm_function_decorator.py  _tqdm_gui.py  _tqdm_multi.py  _tqdm_notebook.py  _tqdm_pandas.py  _tqdm_regress.py  _tqdm_tk.py  _tqdm_web.py  _utils.py  _version.py  asyncio.py  asyncio_notebook.py  auto.py  autonotebook.py  cli.py  completion.sh  core.py  coroutine.py  dask.py  gui.py  itertools.py  keras.py  main.py  notebook.py  patch.py  rich.py  (+8 more)
tqdm/auto/: __init__.py
tqdm/autonotebook/: __init__.py
tqdm/contrib/: __init__.py  asyncio.py  bells.py  concurrent.py  discord.py  itertools.py  logging.py  mytqdm.py  sbar.py  scp.py  slack.py  telegram.py  utils_worker.py  wraps.py
tqdm/platform_specific/: DBusTray.py  IProgressReporter.py  PlatformSpecificProgressReporter.py  UnityDBusTaskbarButton.py  __init__.py  windows_taskbar_extensions.py
tqdm/taskbar/: DBusTray.py  UnityDBusTaskbarButton.py  __init__.py  meta_reporter.py  taskbar.py  windows_taskbar_extensions.py
tqdm/tests/: py37_asyncio.py  tests_async.py  tests_asyncio.py  tests_completion.py  tests_concurrent.py  tests_contrib.py  tests_itertools.py  tests_keras.py  tests_main.py  tests_multi.py  tests_notebook.ipynb  tests_notebook.py  tests_pandas.py  tests_perf.py  tests_synchronisation.py  tests_tqdm.py  tests_version.py
tqdm/tests/bytecode_tracer/: __init__.py  bytecode_tracer.py  code_rewriting_importer.py  py_frame_object.py
