[metadata]
name = tqdm
maintainer = tqdm developers
maintainer_email = python.tqdm@gmail.com
license = MPLv2.0, MIT Licences
description = Fast, Extensible Progress Meter
long_description = file: README.rst
url = https://github.com/tqdm/tqdm
keywords =
    progressbar
    progressmeter
    progress
    bar
    meter
    rate
    eta
    console
    terminal
    time
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities
platforms = any
provides = tqdm

[bdist_wheel]
universal = 1

[options]
python_requires = >=2.6, !=3.0.*, !=3.1.*
tests_require = nose; flake8; coverage
setup_requires = setuptools; setuptools_scm
packages = tqdm, tqdm.contrib

[options.extras_require]
dev = py-make>=0.1.0; twine; argopt; pydoc-markdown

[options.entry_points]
console_scripts = tqdm=tqdm._main:main

[options.package_data]
tqdm =
    CONTRIBUTING.md
    LICENCE
    examples/*.py
    tqdm.1
    requirements-dev.txt

[flake8]
ignore = W503,W504,E722
max_line_length = 80
exclude = .asv,.tox,.ipynb_checkpoints,build,dist,.git,__pycache__

[tool:pytest]
python_files = tests_*.py
testpaths = tests
addopts = -v --tb=short
usefixtures = pretest_posttest
