[bdist_wheel]
universal = 1

[flake8]
ignore = W503,W504,E722
max_line_length = 80
exclude = .asv,.tox,.ipynb_checkpoints,build,dist,.git,__pycache__

[tool:pytest]
python_files = tests_*.py
testpaths = tests
addopts = -v --tb=short
usefixtures = pretest_posttest

[metadata]
name = tqdm
url = https://github.com/tqdm/tqdm
project_urls =
    Changelog = https://tqdm.github.io/releases
    Documentation = https://github.com/tqdm/tqdm#tqdm
    Documentation (dev) = https://tqdm.github.io/docs/tqdm
    Wiki = https://github.com/tqdm/tqdm/wiki
maintainer = tqdm developers
maintainer_email = python.tqdm@gmail.com
license = MPLv2.0, MIT Licences
license_file = LICENCE
description = Fast, Extensible Progress Meter
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = progressbar, progressmeter, progress, bar, meter, rate, eta, console, terminal, time
platforms = any
provides = tqdm
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities

[options]
setup_requires = setuptools>=38.6.0; setuptools_scm
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
tests_require = pytest; flake8; coverage
include_package_data = True
packages = find:
[options.entry_points]
console_scripts =
    tqdm = tqdm.cli:main
[options.package_data]
tqdm = CONTRIBUTING.md, examples/*.py, tqdm.1, completion.sh, requirements-dev.txt
[options.packages.find]
exclude = benchmarks, tests
