[metadata]
name=tqdm
url=https://tqdm.github.io
project_urls=
    Changelog=https://tqdm.github.io/releases
    Source=https://github.com/tqdm/tqdm
    Wiki=https://github.com/tqdm/tqdm/wiki
maintainer=tqdm developers
maintainer_email=python.tqdm@gmail.com
license=MPLv2.0, MIT Licences
license_file=LICENCE
description=Fast, Extensible Progress Meter
long_description=file: README.rst
long_description_content_type=text/x-rst
keywords=progressbar, progressmeter, progress, bar, meter, rate, eta, console, terminal, time
platforms=any
provides=tqdm
# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: MS-DOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Shells
    Topic :: Terminals
    Topic :: Utilities
[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
python_requires=>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires=
    colorama; platform_system == 'Windows'
tests_require=tox
include_package_data=True
packages=find:
[options.extras_require]
dev=py-make>=0.1.0; twine; wheel
telegram=requests
notebook=ipywidgets>=6
[options.entry_points]
console_scripts=
    tqdm=tqdm.cli:main
[options.packages.find]
exclude=benchmarks, tests

[bdist_wheel]
universal=1

[flake8]
max_line_length=99
exclude=.asv,.eggs,.tox,.ipynb_checkpoints,build,dist,.git,__pycache__

[pydocstyle]
add_ignore=D400,D415

[yapf]
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
i18n_comment=NOQA
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
line_length=99
multi_line_output=4
known_first_party=tqdm,tests

[tool:pytest]
timeout=30
log_level=INFO
markers=
    asyncio
    slow
python_files=tests_*.py tests_*.ipynb
testpaths=tests
addopts=-v --tb=short -rxs -W=error --durations=0 --durations-min=0.1
[regex1]
regex: (?<= )[\s\d.]+(it/s|s/it)
replace: ??.??it/s
[regex2]
regex: 00:0[01]<00:0[01]
replace: 00:00<00:00

[coverage:run]
branch=True
include=tqdm/*
omit=
    tqdm/contrib/bells.py
    tqdm/contrib/discord.py
    tqdm/contrib/telegram.py
    tqdm/contrib/utils_worker.py
relative_files=True
[coverage:report]
show_missing=True
